--- a/proj.ipynb
+++ b/proj.ipynb
@@ -2,35 +2,284 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0daffd56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a58d36e5c6549efa8b1743db70157ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import os\n",
-    "import boto3\n",
-    "from botocore.client import Config\n",
-    "\n",
-    "# --- IMPORTANT: Set your DigitalOcean credentials and Space information ---\n",
-    "os.environ['SPACES_ACCESS_KEY'] = 'DO801NGY2P92FAUZUQJH'\n",
-    "os.environ['SPACES_SECRET_KEY'] = 'H0uQz+d/Vjbek70S9YcT84iq9sMEnGaHPEI5H3ydv58'\n",
-    "\n",
-    "# The endpoint URL for your Space (e.g., nyc3.digitaloceanspaces.com)\n",
-    "# You can find this in your Space's settings.\n",
-    "SPACES_ENDPOINT_URL = 'https://assip2025storage.nyc3.digitaloceanspaces.com' # Change to your region\n",
-    "SPACES_BUCKET_NAME = 'assip2025storage' # Change to your Space's name"
+    "from huggingface_hub import login\n",
+    "login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5eac81b6",
+   "execution_count": null,
+   "id": "b9e8075d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import transformers\n",
-    "from pathlib import Path\n",
-    "import shutil"
+    "from datasets import load_dataset\n",
+    "import json\n",
+    "from transformers import TextStreamer\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
+    "import torch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4b8add91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca76a285396d4a9eb967514a5c3e63c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/244 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ds = load_dataset(\"cat-searcher/minif2f-lean4\", split=\"test\")\n",
+    "save_path = \"./minif2f_saved\" \n",
+    "ds.save_to_disk(save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "686948dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_from_disk\n",
+    "ds = load_from_disk(save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5eac81b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d251594b765846a0b6b19e518585d1d7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors.index.json:   0%|          | 0.00/23.9k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f0b999b8329f4f6580197f7ba3e25b1f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c1af16779fcd47c0a75db0960a881915",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00004-of-00004.safetensors:   0%|          | 0.00/1.17G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "52a90586fa1a48638c6ac4ea37f0df1e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00003-of-00004.safetensors:   0%|          | 0.00/4.92G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4c060d8655344104ae0c2ba8bde08f82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00004.safetensors:   0%|          | 0.00/4.98G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78b30a0d24dc4265ac000f8ba5456fd2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00004.safetensors:   0%|          | 0.00/5.00G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8570271582244ec8fb07bcee5814208",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad4a174a137943d5a426ff33e19fbefe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/194 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some parameters are on the meta device because they were offloaded to the cpu.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_id = \"RickyDeSkywalker/TheoremLlama\"\n",
+    "tok  = AutoTokenizer.from_pretrained(model_id)\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_id)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0ddbf5a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/assip2025/.venv/lib/python3.10/site-packages/transformers/modeling_utils.py:3737: UserWarning: Attempting to save a model with offloaded modules. Ensure that unallocated cpu memory exceeds the `shard_size` (5GB default)\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf84c82778ee46ab9df96615068059fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving checkpoint shards:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_save_path = \"./saved_theorem_llama\"\n",
+    "tok.save_pretrained(model_save_path)\n",
+    "model.save_pretrained(model_save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b480189b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b74c8f478a941f18e34bf7d309db752",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "local_tok = AutoTokenizer.from_pretrained(model_save_path)\n",
+    "local_theoremllama = AutoModelForCausalLM.from_pretrained(model_save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fe8e2076",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "streamer = TextStreamer(tok)"
    ]
   },
   {
@@ -39,82 +288,7 @@
    "id": "67d270e7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'''\n",
-    "\n",
-    "\n",
-    "# --- Configuration (from Step 2) ---\n",
-    "# Ensure your credentials are set as environment variables for security\n",
-    "SPACES_ACCESS_KEY = os.getenv('SPACES_ACCESS_KEY')\n",
-    "SPACES_SECRET_KEY = os.getenv('SPACES_SECRET_KEY')\n",
-    "\n",
-    "# --- Function to Upload a Directory ---\n",
-    "def upload_directory_to_space(local_directory, bucket_name, spaces_endpoint_url, access_key, secret_key):\n",
-    "    \"\"\"\n",
-    "    Uploads the contents of a directory to a DigitalOcean Space.\n",
-    "\n",
-    "    :param local_directory: Path to the local directory.\n",
-    "    :param bucket_name: Name of the DigitalOcean Space (bucket).\n",
-    "    \"\"\"\n",
-    "    print(f\"Connecting to DigitalOcean Space: {bucket_name}\")\n",
-    "    session = boto3.session.Session()\n",
-    "    client = session.client('s3',\n",
-    "                            region_name=spaces_endpoint_url.split('.')[1], # e.g., 'ams3'\n",
-    "                            endpoint_url=spaces_endpoint_url,\n",
-    "                            aws_access_key_id=access_key,\n",
-    "                            aws_secret_access_key=secret_key)\n",
-    "    \n",
-    "    print(f\"Starting upload from '{local_directory}'...\")\n",
-    "    for root, dirs, files in os.walk(local_directory):\n",
-    "        for filename in files:\n",
-    "            local_path = os.path.join(root, filename)\n",
-    "            # Create a relative path for the object in the Space\n",
-    "            relative_path = os.path.relpath(local_path, local_directory)\n",
-    "            # On Windows, path separators are '\\', S3 uses '/'.\n",
-    "            s3_path = relative_path.replace(\"\\\\\", \"/\")\n",
-    "\n",
-    "            print(f\"Uploading {local_path} to s3://{bucket_name}/{s3_path}\")\n",
-    "            try:\n",
-    "                client.upload_file(local_path, bucket_name, s3_path)\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error uploading {local_path}: {e}\")\n",
-    "                return False\n",
-    "    print(\"Upload complete.\")\n",
-    "    return True\n",
-    "\n",
-    "# --- Main Script ---\n",
-    "\n",
-    "# 1. Define the model and a temporary local cache directory\n",
-    "model_name = \"EleutherAI/pythia-1.4b-deduped\" # Example model\n",
-    "local_temp_cache = Path(\"./temp_model_cache\")\n",
-    "local_temp_cache.mkdir(exist_ok=True) # Create the directory if it doesn't exist\n",
-    "\n",
-    "print(f\"Downloading model '{model_name}' to temporary local cache: {local_temp_cache}\")\n",
-    "\n",
-    "# 2. Download the model using the transformers library\n",
-    "# The `cache_dir` argument tells Hugging Face where to save the files.\n",
-    "try:\n",
-    "    pipeline = transformers.pipeline(\n",
-    "        \"text-generation\",\n",
-    "        model=model_name,\n",
-    "        cache_dir=str(local_temp_cache)\n",
-    "    )\n",
-    "    print(\"Model download complete.\")\n",
-    "\n",
-    "    # 3. Upload the entire cache directory to DigitalOcean Spaces\n",
-    "    if upload_directory_to_space(str(local_temp_cache), SPACES_BUCKET_NAME, SPACES_ENDPOINT_URL, SPACES_ACCESS_KEY, SPACES_SECRET_KEY):\n",
-    "        # 4. Clean up the local directory to free space\n",
-    "        print(f\"Successfully uploaded to Spaces. Deleting local directory: {local_temp_cache}\")\n",
-    "        shutil.rmtree(local_temp_cache)\n",
-    "        print(\"Local cache deleted.\")\n",
-    "    else:\n",
-    "        print(\"Upload failed. Local files have not been deleted.\")\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"An error occurred during download: {e}\")\n",
-    "\n",
-    "'''"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -271,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "assip2025",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
