--- a/proj.ipynb
+++ b/proj.ipynb
@@ -284,162 +284,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "dabdf731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "PROOF_DIR    = \"/assip2025/llama_proofs/LlamaProofs\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "67d270e7",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a5988dcd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f22962e1e82b41fdbc3a5cd6aca199f6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "from huggingface_hub import login\n",
-    "login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0d46ce9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "import json\n",
-    "from transformers import TextStreamer\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "1ba975c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5d49aa0b6874c9cbab0ee883207dc68",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/212 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mlevi\\miniconda3\\envs\\assip2025\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\mlevi\\.cache\\huggingface\\hub\\datasets--cat-searcher--minif2f-lean4. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be0916ce5d9f45279fdab19d54ef0cab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "valid.jsonl: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e73b25bc4aa4f61aaf467123a006c09",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "test.jsonl: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de34e8cc0cee420aa0c5b329fb51a206",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/244 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c03b96e4cad5457d817b5283d37ea027",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/244 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "ds = load_dataset(\"cat-searcher/minif2f-lean4\", split=\"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0ef5c18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
-    "import torch\n",
+    "for ex in ds:\n",
+    "    pid = ex[\"id\"]                  \n",
+    "    lean_out = f\"{PROOF_DIR}/{pid}.lean\"\n",
+    "    if os.path.exists(lean_out):\n",
+    "        print(f\"✔︎ {pid} already done, skipping.\")\n",
+    "        continue\n",
     "\n",
-    "model_id = \"RickyDeSkywalker/TheoremLlama\"\n",
-    "tok  = AutoTokenizer.from_pretrained(model_id, cache_dir=CACHE_DIR)\n",
-    "bnb_config = BitsAndBytesConfig(load_in_4bit=True, bnb_4bit_use_double_quant=True, bnb_4bit_compute_dtype=torch.float16)\n",
+    "    header   = ex.get(\"header\", \"\")\n",
+    "    theorem  = ex[\"formal_statement\"]\n",
+    "    nl_desc  = ex[\"informal_stmt\"]\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "            MODEL_ID,\n",
-    "            quantization_config=bnb_config,\n",
-    "            device_map=\"auto\",            # Colab T4 / A10 will work\n",
-    "            cache_dir=CACHE_DIR\n",
-    "        )\n",
-    "streamer = TextStreamer(tok)             # prints streaming tokens for visibility\n"
+    "    prompt = (\n",
+    "        f\"-- Informal description\\n{nl_desc}\\n\\n\"\n",
+    "        f\"-- Formal theorem skeleton\\n{theorem}\\n\\n\"\n",
+    "        f\"-- Fill in Lean proof after `:= by` or `:=\\nby`:\\n\"\n",
+    "    )\n",
+    "\n",
+    "    input_ids = tok(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "\n",
+    "    gen_ids = model.generate(\n",
+    "        **input_ids,\n",
+    "        max_new_tokens=512,\n",
+    "        do_sample=False,      # greedy; raise for exploration\n",
+    "        eos_token_id=tok.eos_token_id,\n",
+    "        pad_token_id=tok.eos_token_id,\n",
+    "        streamer=streamer,\n",
+    "    )\n",
+    "    proof = tok.decode(gen_ids[0][input_ids[\"input_ids\"].shape[1]:],\n",
+    "                       skip_special_tokens=True)\n",
+    "\n",
+    "    # ===== 6. Save .lean file =====\n",
+    "    with open(lean_out, \"w\") as f:\n",
+    "        f.write(f\"{header}\\n\\n{theorem[:-6]}:= by\\n{proof}\\n\")\n",
+    "    print(f\"💾  Saved proof for {pid} → {lean_out}\")"
    ]
   }
  ],
